--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.5",
     "element-plus": "^2.9.9",
     "vue": "^3.5.13",
+    "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
