--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "axios-mock-adapter": "^2.1.0",
     "bootstrap": "^5.3.5",
     "element-plus": "^2.9.9",
     "vue": "^3.5.13",
