--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios-mock-adapter": "^2.1.0",
     "bootstrap": "^5.3.5",
     "element-plus": "^2.9.9",
+    "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.5.1"
